# Optikmer

./: .gitignore  README.md  optikmer.py  optikmerjellyfish.py  pyproject.toml  setup.py  test.py
benchmark/: README.md  optikmer_histogram_report.html  output.jf.histo
optikmer/: __main__.py  bashk.py  optikmer.py  optikmerjellyfish.py
public/: shortfrag_trimmed_1.fq
realdata/: README.md  histograms_report.html  optikmer_histogram_report.html
